--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
+                <li><a href="#">Image</a></li>
             </ul>
             <div class="menu-icon">
                 <div class="line1"></div>
